--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
   
   <style>
   
-  
+  body {    
+  background-color:green;      
+  color:#fff;      
+  text-align:center
   
    </style>
 
