--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   
   body {    
   background-color:blue;      
-  color:#fff;      
+  color:#0000ff;      
   text-align:center
   
    </style>
